--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,39 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- Primary Meta Tags -->
+    <title>Matthew malone</title>
+    <meta name="title" content="Matthew malone" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Matthew Malone - Creative software developer and engineer who loves javascript and modern web technologies."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="Matthew malone" />
+    <meta
+      property="og:description"
+      content="Matthew Malone - Creative software developer and engineer who loves javascript and modern web technologies."
+    />
+    <meta
+      property="og:image"
+      content="https://brilliant-axolotl-d5c337.netlify.app/metaimage.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="Matthew malone" />
+    <meta
+      property="twitter:description"
+      content="Matthew Malone - Creative software developer and engineer who loves javascript and modern web technologies."
+    />
+    <meta
+      property="twitter:image"
+      content="https://brilliant-axolotl-d5c337.netlify.app/metaimage.png"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
